# GgAdv

./: .gitignore  CMakeLists.txt  main.cpp
include/: component_type.h  cpu.h  gba_bios.h  system_components.h  system_enum.h  system_literals.h  utility.h
include/cpu/: cpu.h
include/cpu/instruction_implement/: cycle_tools.h
include/cpu/instruction_implement/arm/: arm_header.h  arm_implement_tools.h  arm_table.h  macro.h
include/cpu/register/: register.h
include/disassembler/: bit_mask.h  cpu_decode.h  cpu_status.h  decode_tools.h  disassembler.h  instruction.h
include/disassembler/disassemble/: instruction_access.h  utility.h
include/disassembler/disassemble/decoder/arm/: arm_decoder.h  arm_handler.h  arm_type_table.h
include/disassembler/disassemble/decoder/thumb/: thumb_decoder.h  thumb_type_table.h
include/disassembler/disassemble/formatter/: arg_formatter.h  arm_formatter.h  thumb_formatter.h
include/disassembler/disassemble/information/: arm_info.h  instruction_info.h  thumb_info.h
include/gg_utility/: array_tool.h  bit_manipulate.h
include/mmu/: RegionBase.h  display_memory.h  gamepak_memory.h  general_memory.h  mmu.h
include/mmu/IO/: dma_transfer_channels.h  interrupt_waitstate_powerdown_control.h  ioreg_type.h  keypad_input.h  lcd_registers.h  serial_communication_1.h  serial_communication_2.h  sound_registers.h  timer_registers.h
src/: cpu.cpp  system_components.cpp
src/cpu/: cpu.cpp  reg_manipulate.cpp  to_string.cpp
src/cpu/instruction_implement/: arm_alu_type1.cpp  arm_alu_type2.cpp  arm_alu_type3.cpp  cpsr_modify.cpp  cycle_tools.cpp
src/cpu/register/: register.cpp  to_string.cpp
src/disassembler/: disassembler.cpp  instruction.cpp
src/disassembler/arm_disassembler/: to_string.cpp
src/disassembler/thumb_disassembler/: thumb_formatter.cpp
src/mmu/: display_memory.cpp  gamepak_memory.cpp  general_memory.cpp  mmu.cpp
test/mmu/: test_mmu.h  write_test.cpp
tool_script/: IOmap  generate_io_access_handler.py
